fix: layout bugs

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  width: 90%;
+  max-width: 90%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -44,8 +44,8 @@ header label {
   color: #fff;
   font-weight: 600;
   position: absolute;
-  top: 10px;
-  left: 14px; 
+  top: 9px;
+  left: 9px;
 }
 
 header input {
@@ -55,6 +55,15 @@ header input {
 
   border-radius: 4px;
   border: none;
+}
+
+#search-bar {
+  color: red;
+}
+
+/* COMO ISSO FUNCIONOU ????? */
+.input-wrapper:focus-within label {
+  display: none;
 }
 
 /* MAIN */
@@ -105,7 +114,6 @@ aside .card {
 
 .card img {
   object-fit: cover;
-
 }
 
 .text-content {
@@ -117,7 +125,6 @@ aside .card {
 aside h3 {
   font-size: 1.125rem;
   color: #202024;
-
 }
 
 aside p {
@@ -137,15 +144,23 @@ footer .container {
 }
 
 /* @media */
-@media (min-width: 1200px) {
+@media (min-width: 1273px) {
+  .container {
+    max-width: 1200px;
+  }
+
   body {
     display: grid;
-    grid-template-areas: 
-    "header header"
-    "main aside"
-    "footer footer";
-     grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "header header"
+      "main aside"
+      "footer footer";
+    grid-template-columns: 2fr 1fr;
     gap: 32px;
+  }
+
+  #main-blog-img {
+    max-width: max-content;
   }
 
   header {
@@ -153,11 +168,16 @@ footer .container {
   }
 
   main {
+    text-align: start;
     grid-area: main;
+    max-width: 700px;
+    margin: 0 auto;
   }
 
   aside {
     grid-area: aside;
+    max-width: 400px;
+    margin-right: auto;
   }
 
   footer {
